packages/components/src/components/Tabs/Tabs.module.css
/* root */
.root {
  --tabs-gap: 0;
  --tabs-direction: row;
  --tabs-scrollbar-scroll-width: none;
  --tabs-scrollbar-display: flex;
  --tabs-scrollbar-inline-size: 100%;
  --tabs-scrollbar-overflow-x: auto;
  --tabs-scrollbar-overflow-y: hidden;

  /* tab */
  --tab-justify-content: center;
  --tab-bg-color: ;
  --tab-inline-size: ;
  --tab-min-inline-size: 40px;
  --tab-block-size: var(--kbq-size-3xl);
  --tab-min-block-size: ;
  --tab-outline-color: transparent;
  --tab-outline-width: var(--kbq-size-3xs);
  --tab-color: var(--kbq-foreground-contrast);
  --tab-border-radius: var(--kbq-size-border-radius);
  --tab-padding-inline: var(--kbq-size-m);
  --tab-padding-block: var(--kbq-size-xs);
}

.horizontal {
  &.stretched {
    --tab-inline-size: 100%;
  }
}

.vertical {
  --tab-justify-content: start;
  --tabs-gap: var(--kbq-size-s);
  --tabs-direction: column;
  --tabs-scrollbar-scroll-width: auto;
  --tabs-scrollbar-display: inline-block;
  --tabs-scrollbar-inline-size: auto;
  --tabs-scrollbar-overflow-x: hidden;
  --tabs-scrollbar-overflow-y: auto;

  display: flex;
}

.underlined {
  --tab-min-inline-size: 44px;

  & .base::after {
    content: '';
    inset-inline: 0;
    inset-block-end: 0;
    position: absolute;
    block-size: var(--kbq-size-border-width);
    background: var(--kbq-line-contrast-less);
    z-index: calc(var(--kbq-layer-absolute) + 1);
  }
}

/* tabs */
.base {
  display: flex;
  position: relative;
}

/* tab-list */
.tabList {
  flex-grow: 1;
  display: flex;
  position: relative;
  gap: var(--tabs-gap);
  flex-direction: var(--tabs-direction);
}

/* scrollBox */
.scrollBox {
  position: relative;
  display: var(--tabs-scrollbar-display);
  inline-size: var(--tabs-scrollbar-inline-size);
  scrollbar-width: var(--tabs-scrollbar-scroll-width);
  overflow: var(--tabs-scrollbar-overflow-x) var(--tabs-scrollbar-overflow-y);
}

